<resources>
    <string name="app_name">justjava2</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank You!</string>
    <string name="yourname">Enter Name</string>
    <string name="whippedcream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity!</string>
    <string name="minus">-</string>
    <string name="baseQuantity">2</string>
    <string name="plus">+</string>
    <string name="price">Price!</string>
    <string name="displayPrice">$10</string>
    <string name="order">Order!</string>
    <string name="orderFor">Just Java Order For</string>
</resources>